changed a text font

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>The Incredible Doctor Flying Cloud</title>
         <link href='https://fonts.googleapis.com/css?family=Carter One' rel='stylesheet'>
-        <link href='https://fonts.googleapis.com/css?family=Walter Turncoat' rel='stylesheet'>
+        <link href="https://fonts.googleapis.com/css2?family=Vollkorn:wght@600&display=swap" rel="stylesheet"> 
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="styles.css" type="text/css">
     </head>
@@ -66,7 +66,7 @@
             According to Mrs. Bullard this doctor, who was also a
             Methodist preacher, was performing healing miracles
             everywhere he went. at grandmas request Papa drove
-            down the mountain and asked doctor flying cloud to come
+            down the mountain and asked Doctor Flying Cloud to come
             and treat grandmas ailments.</p>
         <p>He moved into our house bag and baggage --- and stayed
             fifteen months. He even sent for his nephew, Willie, to
@@ -84,8 +84,8 @@
             some pretty wild dreams --- the most frightening ones
             had to do with people being buried alive. I still have a
             phobia about that!</p>
-        <p>Eugene, Evelyn and I grew quite fond of doctor flying
-            cloud and I believe he liked us too. he insisted we call
+        <p>Eugene, Evelyn and I grew quite fond of Doctor Flying
+            Cloud and I believe he liked us too. he insisted we call
             him grandpa which I for one was a little reluctant to do.
             I felt that name was only for grandpa Jackson.
             Though he did like me, he was responsible for my being
@@ -109,7 +109,7 @@
             belonged to him. Mama told me to apologize but I
             refused to say I was sorry. she took a peach tree limb
             and switched my bare legs. I still refused to apologize.
-            she finally gave up on me. I resented doctor flying clouds
+            she finally gave up on me. I resented Doctor Flying Clouds
             attitude very much. later my mother said she should not
             have punished me. it really wasnt his melon and he had
             no right to boss us around.</p>
@@ -238,7 +238,7 @@
             So who knows? I may yet meet some of Doctor Flying
             Clouds spirits I didnt believe were for real either!</p>
         <p>These are the combined rememberances of Eugene Ritter, Evelyn Massengill and Floy Brent
-            doctor Flying cloud joined our family in 1934 in the Massey house @ almond, ar.
+            Doctor Flying Cloud joined our family in 1934 in the Massey house @ almond, ar.
         </p>
     </article></main>
     <div class="navigation">
