--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
             smarter than I believed him!
             So who knows? I may yet meet some of Doctor Flying
             Clouds spirits I didnt believe were for real either!</p>
-        <p>These are the combined rememberances of Eugene Ritter, Evelyn Massengill and Floy Brent
+        <p>These are the combined rememberances of Eugene Ritter, Evelyn Massengill and Floy Brent.<br><br>
             Doctor Flying Cloud joined our family in 1934 in the Massey house @ Almond, AR.
         </p>
     </article></main>
