--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             arrow. His stocky frame was not picturesque; however,
             he did have a fierce look in his beady black
             eyes --- or did an eight year old girl imagine that? His
-            skin though not red red was a satisfyingly dark color,
+            skin though not red was a satisfyingly dark color,
             and he instilled a feeling of awe in me.</p>
         <p>Later we were all to look back with wonder at the events
             that transpired in the next fifteen months. Its
