gave up on sticky

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="styles.css" type="text/css">
     </head>
 <body>
-    <main><article class="article">
+    <main><article>
         <h1>The Incredible Doctor Flying Cloud</h1>
         <img id="portrait" src="images\drflyingcloud.png" alt="Doctor Flying Cloud">
         <div class="text">
