--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 <body>
     <main><article>
         <h1>The Incredible Doctor Flying Cloud</h1>
-        <img id="portrait" src="images\drflyingcloud.png" alt="Doctor Flying Cloud">
+        <div class="img">
+            <img id="portrait" src="images\drflyingcloud.png" alt="Doctor Flying Cloud">
+        </div>
         <div class="text">
             <p>The following historical account was previously recorded by:<br>
                 <br>Floy Brent (Ritter)
