resized windows now resize the entire page

--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
     <div class="navigation">
         <button href="#" class="previous" title="Previous" onclick="previous()"><img id="previous" src="images\arrohead.png" alt="&laquo; Previous"></button>
         <button class="home" onclick="home()"><i class="fa fa-home"></i></button>
-        <button href="#" class="next" title="Next" onclick="next()"><img src="images\arrohead.png" alt="&raquo; Next"></button>
+        <button href="#" class="next" title="Next" onclick="next()"><img id="next" src="images\arrohead.png" alt="&raquo; Next"></button>
     </div>
     <div id="copyright">Copyright &copy; 2020 Randy Parker</div>
     <script type="text/javascript">
