cleaned a bit in preparation to submit

--- a/index.html
+++ b/index.html
@@ -216,8 +216,8 @@
                 with those back feathers almost brushing the back of my
                 knees as he told us the story.
                 This beautiful feathered relic was Sitting Bull's war
-                bonnet --- the one he wore during Custer's Last Stand.
-                Sitting Bull was Doctor Flying Cloud's uncle. Though
+                bonnet --- the one he wore during Custer's Last Stand.</p>
+            <p>Sitting Bull was Doctor Flying Cloud's uncle. Though
                 Doctor Flying Cloud was just fourteen years old and too
                 young to be a warrior, he along with the entire tribe was
                 present during the battle of Custer's Last Stand. He did not
@@ -230,9 +230,8 @@
                 knew they were for real. Now here was something right
                 out of the history book! I guess I sort of classed it
                 along with the other stories and didn't ask too many
-                questions.
-                I regret that attitude of mine to this day. Years after
-                Doctor Flying Cloud had gone on his way, I discovered
+                questions. I regret that attitude of mine to this day.</p>
+            <p> Years after Doctor Flying Cloud had gone on his way, I discovered
                 this story was true. He, wearing the war bonnet, was
                 pictured with some Washington dignitaries in my high
                 school government text book. The accompanying
@@ -241,7 +240,7 @@
                 smarter than I believed him!
                 So who knows? I may yet meet some of Doctor Flying
                 Cloud's spirits I didn't believe were for real either!</p>
-            <p>These are the combined rememberances of Eugene Ritter, Evelyn Massengill and Floy Brent.<br><br>
+            <p>These are the combined rememberances of Eugene Ritter, Evelyn Massengill (Ritter) and Floy Brent (Ritter).<br><br>
                 Doctor Flying Cloud joined our family in 1934 in the Massey house @ Almond, AR.
             </p>
         </div>
