--- a/index.html
+++ b/index.html
@@ -250,7 +250,9 @@
         <button class="home" onclick="home()"><i class="fa fa-home"></i></button>
         <button href="#" class="next" title="Next" onclick="next()"><img id="next" src="images\arrohead.png" alt="&raquo; Next"></button>
     </div>
-    <div id="copyright">Copyright &copy; 2020 Randy Parker</div>
+    <footer>
+        <div id="copyright">Copyright &copy; 2020 Randy Parker</div>
+    </footer>
     <script type="text/javascript">
         let currentSelected = 0;
 
