--- a/index.html
+++ b/index.html
@@ -256,12 +256,22 @@
     <script type="text/javascript">
         let currentSelected = 0;
 
+        let prvBtn  = document.getElementsByTagName("button")[0];
+        let homeBtn = document.getElementsByTagName("button")[1];
+        let nxtBtn  = document.getElementsByTagName("button")[2];
+
+        prvBtn.style.visibility = "hidden";
+        document.getElementsByTagName("button")[1].style.visibility = "hidden";
+
         document.getElementsByTagName("p")[currentSelected].style.visibility = "visible";
 
         function home(){
             document.getElementsByTagName("p")[currentSelected].style.visibility = "hidden";
             currentSelected = 0;
             document.getElementsByTagName("p")[currentSelected].style.visibility = "visible";
+            prvBtn.style.visibility  = "hidden";
+            homeBtn.style.visibility = "hidden";
+            nxtBtn.style.visibility = "visible";
         }
 
         function next(){
@@ -269,20 +279,21 @@
                 document.getElementsByTagName("p")[currentSelected].style.visibility = "hidden";
                 currentSelected += 1;
                 document.getElementsByTagName("p")[currentSelected].style.visibility = "visible";
+                prvBtn.style.visibility  = "visible";
+                homeBtn.style.visibility = "visible";
+                nxtBtn.style.visibility  = (currentSelected === document.getElementsByTagName("p").length -1)?"hidden":"visible";
             }
         }
+        
         function previous(){
             if (currentSelected > 0) {
                 document.getElementsByTagName("p")[currentSelected].style.visibility = "hidden";
                 currentSelected -= 1;
                 document.getElementsByTagName("p")[currentSelected].style.visibility = "visible";
+                prvBtn.style.visibility  = (currentSelected === 0)?"hidden":"visible";
+                homeBtn.style.visibility = (currentSelected === 0)?"hidden":"visible";
+                nxtBtn.style.visibility = "visible";
             }
-        }
-
-        function end(){
-            document.getElementsByTagName("p")[currentSelected].style.visibility = "hidden";
-            currentSelected = document.getElementsByTagName("p").length -1;
-            document.getElementsByTagName("p")[currentSelected].style.visibility = "visible";
         }
     </script>
 </body>
