more minor changes

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <br>January 17, 1927 - July 28, 2020<br><br>
                     In collaboration with:<br>
                     <br>Eugene Ritter
-                    <br>August 16, 1920 - January 9, 2017
+                    <br>August 16, 1920 - January 9, 2017<br>
                     <br>Evelyn Massengill (Ritter)
                     <br>1922 - November 18th, 2010
                 </p>
