--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     fountain of youth, or at any rate a cure for her aches and
                     pains. Grandma's friend, Alice Bullard, told her about
                     this eighty year old Indian Doctor Flying Cloud who had
-                    wandered through the country to locust grove, Arkansas.
+                    wandered through the country to Locust Grove, Arkansas.
                     According to Mrs. Bullard this doctor, who was also a
                     Methodist preacher, was performing healing miracles
                     everywhere he went. At grandmas request Papa drove
