trying text font size vh instead of vw

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     little redhead with a wonderful sense of humor. Papa
                     was a well read school teacher with a twinkle in his
                     eyes. they both had a deep and abiding faith in god and
-                    were always ready to help others. according to Papa the
+                    were always ready to help others. According to Papa the
                     more you put into life --- the more you get back. One of
                     his favorite quotes ends --- and in parting leave behind
                     you footprints on the sands of time.</p>
@@ -188,7 +188,7 @@
                     children I had a bad sore throat. I asked the doctor if
                     my tonsils were the cause. He said, no, you have had
                     your tonsils removed. I told him I had never had
-                    surgery. he said, well, you have no tonsils. They must
+                    surgery. He said, well, you have no tonsils. They must
                     have rotted out! I think those lousy little yellow pills
                     burned them out. I know they burned my throat like fire
                     when I had to gargle them. None of us, cousins, aunts,
