--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <br>Evelyn Massengill (Ritter)
                     <br>1922 - November 18th, 2010
                 </p>
-                <p>He wasnt wearing a breach cloth --- he didn't have war
+                <p>He wasn't wearing a breach cloth --- he didn't have war
                     paint all over his face --- his straight black hair was short
                     and he was carrying a suitcase instead of a bow and
                     arrow. His stocky frame was not picturesque; however,
@@ -42,7 +42,7 @@
                     rich in the important things in life. Mama was a cute
                     little redhead with a wonderful sense of humor. Papa
                     was a well read school teacher with a twinkle in his
-                    eyes. they both had a deep and abiding faith in god and
+                    eyes. They both had a deep and abiding faith in god and
                     were always ready to help others. According to Papa the
                     more you put into life --- the more you get back. One of
                     his favorite quotes ends --- and in parting leave behind
@@ -116,7 +116,7 @@
                     and switched my bare legs. I still refused to apologize.
                     she finally gave up on me. I resented Doctor Flying Cloud's
                     attitude very much. Later my mother said she should not
-                    have punished me. It really wasnt his melon and he had
+                    have punished me. It really wasn't his melon and he had
                     no right to boss us around.</p>
                 <p>For instance, the incident at the pine grove --- there was a
                     large grove of pine trees down in our pasture near the
@@ -155,7 +155,7 @@
                     was growing up," said Doctor Flying Cloud. He told us the
                     Roosevelts put him through school and were responsible
                     for his being so well educated.
-                    I dont know which school he attended --- just that it was
+                    I don't know which school he attended --- just that it was
                     back east somewhere. He was a full fledged doctor of
                     the homeopathic school. At that time there were two
                     schools of medicine--the homeopathic and the
@@ -165,7 +165,7 @@
                     medicine. He convinced Mama she should allow him to
                     cure her headache. They moved everything off the long
                     oak harvest table in the kitchen and he had Mama lie
-                    down on her stomach on the table. I dont know if he
+                    down on her stomach on the table. I don't know if he
                     could have cured her headache or not. She allowed him
                     to take about two whacks on her back --- then she jumped
                     off that table madder than and old wet hen! I heard him
@@ -181,7 +181,7 @@
                     those little yellow pills Doctor Flying Cloud gave him.
                     The next morning his temperature was gone and so was
                     the sore throat.
-                    I dont know what drug was in those pills but I still
+                    I don't know what drug was in those pills but I still
                     remember the taste. It was like nothing I had ever tasted
                     before or since.</p>
                 <p>After I was married and had the three
