minor text changes

--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
                     wandered through the country to Locust Grove, Arkansas.
                     According to Mrs. Bullard this doctor, who was also a
                     Methodist preacher, was performing healing miracles
-                    everywhere he went. At grandmas request Papa drove
+                    everywhere he went. At Grandma's request Papa drove
                     down the mountain and asked Doctor Flying Cloud to come
-                    and treat grandmas ailments.</p>
+                    and treat Grandma's ailments.</p>
                 <p>He moved into our house bag and baggage --- and stayed
                     fifteen months. He even sent for his nephew, Willie, to
                     come and stay with him in our house. He made himself
@@ -90,7 +90,7 @@
                     phobia about that!</p>
                 <p>Eugene, Evelyn and I grew quite fond of Doctor Flying
                     Cloud and I believe he liked us too. He insisted we call
-                    him grandpa which I for one was a little reluctant to do.
+                    him Grandpa which I for one was a little reluctant to do.
                     I felt that name was only for grandpa Jackson.
                     Though he did like me, he was responsible for my being
                     punished once. You see --- I still believe it was his fault
@@ -109,7 +109,7 @@
                     melon we want to eat? Mama said, yes. Of course I
                     took the big one! We did save the seeds and what we
                     could not eat we shared with everyone else.</p>
-                <p>Doctor flying cloud was very angry with me. He told
+                <p>Doctor Flying Cloud was very angry with me. He told
                     Mama I should be punished because I knew the melon
                     belonged to him. Mama told me to apologize but I
                     refused to say I was sorry. She took a peach tree limb
@@ -184,8 +184,8 @@
                     I don't know what drug was in those pills but I still
                     remember the taste. It was like nothing I had ever tasted
                     before or since.</p>
-                <p>After I was married and had the three
-                    children I had a bad sore throat. I asked the doctor if
+                <p>Sometime after I was married, after having all three
+                    of my children, I had a bad sore throat. I asked the doctor if
                     my tonsils were the cause. He said, no, you have had
                     your tonsils removed. I told him I had never had
                     surgery. He said, well, you have no tonsils. They must
